--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,30 +1,87 @@
-<nav
-	style="
+<style>
+	body {
+		font-family: "Montserrat", sans-serif;
+		margin: 0;
+	}
+
+	nav {
 		background-color: #333;
 		color: white;
 		padding: 20px 40px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		font-family: 'Arial', sans-serif;
+		font-size: 24px;
+		font-weight: normal;
 		width: 95%;
 		position: fixed;
 		top: 0;
-	"
->
-	<span style="font-size: 24px; font-weight: bold">Blogify</span>
-	<div style="display: flex; align-items: center; position: relative">
+		font-family: "Montserrat", sans-serif;
+	}
+
+	nav a {
+		color: white;
+		margin-right: 20px;
+		text-decoration: none;
+		font-size: 23px;
+	}
+
+	button {
+		background: none;
+		border: 2px solid #aaa;
+		border-radius: 30px;
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		padding: 5px;
+		margin: 0;
+		font-size: 18px;
+	}
+
+	button span {
+		font-size: 16px;
+		color: gray;
+		margin: 0 8px;
+	}
+
+	#dropdown {
+		display: none;
+		position: absolute;
+		top: 100%;
+		right: 20px;
+		background-color: #444;
+		width: 160px;
+		z-index: 1;
+		margin-top: 10px;
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+		border-radius: 5px;
+		padding-top: 8px;
+	}
+
+	#dropdown div,
+	#dropdown a {
+		color: white;
+		padding: 8px 16px;
+		display: block;
+		border-bottom: 1px solid #666;
+		cursor: pointer;
+		font-size: 18px;
+	}
+
+	.buttons {
+		display: flex;
+		align-items: center;
+	}
+</style>
+
+<nav>
+	<div>
+		<a href="/blog">Blogify</a>
+	</div>
+
+	<div class="buttons">
+		<a href="/addBlog">Add Blog</a>
 		<button
-			style="
-				background: none;
-				border: 2px solid #aaa;
-				border-radius: 30px;
-				cursor: pointer;
-				display: flex;
-				align-items: center;
-				padding: 5px;
-				margin: 0;
-			"
 			onclick="toggleDropdown()"
 			onmouseover="buttonHover(true)"
 			onmouseout="buttonHover(false)"
@@ -40,122 +97,32 @@
 					background-repeat: no-repeat;
 				"
 			></div>
-			<span style="font-size: 16px; color: gray; margin: 0 8px">
-				USER
-			</span>
+			<span
+				><% if (locals.user) { %> <%= locals.user.name %> <% } else {
+				%> USER <% } %></span
+			>
 		</button>
-		<div
-			id="dropdown"
-			style="
-				display: none;
-				position: absolute;
-				top: 100%;
-				left: 0;
-				background-color: #444;
-				min-width: 160px;
-				z-index: 1;
-				margin-top: 10px;
-				box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-				border-radius: 5px;
-				padding-top: 8px;
-			"
-		>
+		<div id="dropdown">
+			<% if (locals.user) { %>
 			<div
-				style="
-					color: white;
-					padding: 8px 16px;
-					display: block;
-					border-bottom: 1px solid #666;
-					cursor: pointer; /* Added cursor pointer */
-				"
-				onmouseover="dropdownItemHover(this, true)"
-				onmouseout="dropdownItemHover(this, false)"
-				onclick="toggleThemeDropdown()"
-			>
-				Theme
-			</div>
-			<div
-				id="themeDropdown"
-				style="
-					display: none;
-					position: absolute;
-					top: 0;
-					left: -160px; /* Updated to left */
-					background-color: #444;
-					min-width: 160px;
-					z-index: 1;
-					margin-top: 0;
-					box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-					border-radius: 5px;
-					padding-top: 8px;
-				"
-			>
-				<div
-					style="
-						color: white;
-						padding: 8px 16px;
-						display: block;
-						border-bottom: 1px solid #666;
-						cursor: pointer; /* Added cursor pointer */
-					"
-					onmouseover="dropdownItemHover(this, true)"
-					onmouseout="dropdownItemHover(this, false)"
-				>
-					Light
-				</div>
-				<div
-					style="
-						color: white;
-						padding: 8px 16px;
-						display: block;
-						border-bottom: 1px solid #666;
-						cursor: pointer; /* Added cursor pointer */
-					"
-					onmouseover="dropdownItemHover(this, true)"
-					onmouseout="dropdownItemHover(this, false)"
-				>
-					Dark
-				</div>
-			</div>
-			<div
-				style="
-					color: white;
-					padding: 8px 16px;
-					display: block;
-					border-bottom: 1px solid #666;
-					cursor: pointer; /* Added cursor pointer */
-				"
 				onmouseover="dropdownItemHover(this, true)"
 				onmouseout="dropdownItemHover(this, false)"
 			>
-				Your Blogs
+				YOUR BLOGS
 			</div>
-			<div
-				style="
-					color: white;
-					padding: 8px 16px;
-					display: block;
-					border-bottom: 1px solid #666;
-					cursor: pointer; /* Added cursor pointer */
-				"
+			<% } %>
+			<a
+				href="<%= locals.user ? '/logout' : '/login' %>"
 				onmouseover="dropdownItemHover(this, true)"
 				onmouseout="dropdownItemHover(this, false)"
+				><%= locals.user ? 'LOGOUT' : 'LOGIN' %></a
 			>
-				Logout
-			</div>
-			<div
-				style="
-					color: white;
-					padding: 8px 16px;
-					display: block;
-					border-bottom: 1px solid #666;
-					cursor: pointer;
-				"
+			<a
+				href="/feedback"
 				onmouseover="dropdownItemHover(this, true)"
 				onmouseout="dropdownItemHover(this, false)"
+				>FEEDBACK</a
 			>
-				Feedback
-			</div>
 		</div>
 	</div>
 </nav>
@@ -165,12 +132,6 @@
 		var dropdown = document.getElementById("dropdown");
 		dropdown.style.display =
 			dropdown.style.display === "none" ? "block" : "none";
-	}
-
-	function toggleThemeDropdown() {
-		var themeDropdown = document.getElementById("themeDropdown");
-		themeDropdown.style.display =
-			themeDropdown.style.display === "none" ? "block" : "none";
 	}
 
 	function dropdownItemHover(item, isHover) {
