--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
 				box-sizing: border-box;
 				font-family: "Montserrat", sans-serif;
 			}
+			a {
+				text-decoration: none;
+				color: #fff;
+			}
 		</style>
 		<title>Blog App | Home</title>
 	</head>
