--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,10 +70,9 @@
 	</head>
 
 	<body style="margin: 0; padding: 0">
-		<%- include('./partials/navbar.ejs') %>
 		<div class="container">
 			<form
-				action="user/login"
+				action="/user/login"
 				method="post"
 			>
 				<h1>Login</h1>
