--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -6,9 +6,113 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+		/>
+		<style>
+			body {
+				background-color: #1a1a1a;
+				color: #ffffff;
+				font-family: "Montserrat", sans-serif;
+				margin: 0;
+				padding: 0;
+			}
+
+			.body {
+				padding: 20px;
+			}
+
+			.input-wrapper {
+				position: relative;
+				margin-top: 120px;
+				font-family: "Montserrat", sans-serif;
+			}
+
+			label {
+				color: #ffffff;
+				margin-bottom: 10px;
+				display: block;
+				font-family: "Montserrat", sans-serif;
+			}
+
+			input.titleInput,
+			textarea.blogInput,
+			input.coverImageInput {
+				width: 100%;
+				padding: 10px;
+				font-size: 16px;
+				background-color: #333333;
+				color: #ffffff;
+				border: 1px solid #666666;
+				border-radius: 5px;
+				margin-bottom: 20px;
+				box-sizing: border-box;
+				font-family: "Montserrat", sans-serif;
+			}
+
+			input.coverImageInput {
+				background-color: #444;
+				color: #ffffff;
+				border: 1px solid #666;
+				border-radius: 5px;
+				box-sizing: border-box;
+			}
+
+			button.publish-button {
+				background-color: #ffcc00;
+				color: #000000;
+				padding: 10px 15px;
+				font-size: 16px;
+				border: none;
+				border-radius: 5px;
+				cursor: pointer;
+				display: flex;
+				align-items: center;
+				font-family: "Montserrat", sans-serif;
+			}
+
+			button.publish-button img {
+				margin-left: 8px;
+				width: 20px;
+				height: 20px;
+			}
+		</style>
 		<title>Blog App | Add Blog</title>
 	</head>
 	<body>
-		ADD BLOG
+		<%- include('./partials/navbar.ejs') %>
+		<div class="body">
+			<form
+				class="input-wrapper"
+				action="/blog"
+				method="post"
+			>
+				<label for="title">Title</label>
+				<input
+					type="text"
+					class="titleInput"
+					id="title"
+					name="title"
+					required
+				/>
+
+				<label for="blog">Blog Content</label>
+				<textarea
+					class="blogInput"
+					id="blog"
+					rows="12"
+					name="blog"
+					required
+				></textarea>
+
+				<button
+					class="publish-button"
+					type="submit"
+				>
+					Publish
+				</button>
+			</form>
+		</div>
 	</body>
 </html>
