--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -47,11 +47,11 @@
 	#dropdown {
 		display: none;
 		position: absolute;
-		top: 100%;
+		top: 60px;
 		right: 20px;
 		background-color: #444;
 		width: 160px;
-		z-index: 1;
+		z-index: 2;
 		margin-top: 10px;
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 		border-radius: 5px;
